[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "messages"
version = "0.0.1"
authors = [
  { name="Parker Hooten", email="parkerhooten@gmail.com" },
]
description = "Package to print out messages to user."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MAC OS",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
